tests/snapshots/compiler_error_fixtures/row_effects__unknown_handled_effect_e405.snap
---
source: tests/error_fixtures/compiler_error_fixtures_snapshots.rs
---
Fixture: examples/compiler_errors/row_effects/unknown_handled_effect_e405.flx
== compile ==
failed (compile)
== diagnostics ==
error[E402]: Missing Effect Handler Arm

Handler for `Console` is missing operations: println.

  examples/compiler_errors/row_effects/unknown_handled_effect_e405.flx:2:13
  |
2 |     let _ = 1 handle Console {
  |             ^
  |             - handled expression

Hint:
  Add handler arms for all declared operations of the effect.
== stdout ==
<not executed>
